# tinyrlibc

./: CHANGELOG.md  Cargo.toml  LICENCES.md  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml
examples/: rand.rs
src/: abs.rs  atof.rs  atoi.rs  ctype.rs  errno.rs  isdigit.rs  isspace.rs  itoa.rs  lib.rs  malloc.rs  memchr.rs  qsort.rs  qsort_r.rs  rand.rs  rand_r.rs  signal.rs  snprintf.c  snprintf.rs  strcat.rs  strchr.rs  strcmp.rs  strcpy.rs  strcspn.rs  strlen.rs  strncasecmp.rs  strncmp.rs  strncpy.rs  strrchr.rs  strspn.rs  strstr.rs  strtod.rs  strtof.rs  strtol.rs  strtoul.rs
