[package]
name = "tinyrlibc"
version = "0.4.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2021"
description = "Tiny, incomplete C library for bare-metal targets, written in Stable (but Unsafe) Rust"
license-file = "LICENCES.md"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/tinyrlibc"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
portable-atomic = { version = "1.6.0", optional = true }

[dev-dependencies]
static-alloc = "0.2.4"
critical-section = { version = "1.2.0", features = ["std"] }

[build-dependencies]
cc = "1.0"

[features]
default = ["all"]
all = [
    "abs",
    "atoi",
    "isalpha",
    "isdigit",
    "isspace",
    "isupper",
    "itoa",
    "memchr",
    "qsort",
    "rand_r",
    "snprintf",
    "strcat",
    "strchr",
    "strcmp",
    "strcpy",
    "strlen",
    "strncasecmp",
    "strncmp",
    "strncpy",
    "strrchr",
    "strstr",
    "strtoimax",
    "strtol",
    "strtoll",
    "strtoul",
    "strtoull",
    "strtoumax",
    "utoa",
]

abs = []
alloc = []
atoi = []
isalpha = []
isdigit = []
isspace = []
isupper = []
itoa = []
memchr = []
qsort = []
rand_r = []
rand = ["dep:critical-section"]
signal = ["dep:portable-atomic"]
signal-cs = ["portable-atomic/critical-section"]
snprintf = []
strcat = []
strchr = []
strcmp = []
strcpy = []
strlen = []
strncasecmp = []
strncmp = []
strncpy = []
strrchr = []
strstr = []
strtoimax = []
strtol = []
strtoll = []
strtoul = []
strtoull = []
strtoumax = []
utoa = []
