[package]
name = "tinyrlibc"
version = "0.5.1"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2021"
description = "Tiny, incomplete C library for bare-metal targets, written in Stable (but Unsafe) Rust"
license-file = "LICENCES.md"
readme = "README.md"
repository = "https://github.com/rust-embedded-community/tinyrlibc"

[dependencies]
portable-atomic = { version = "1.6.0", optional = true }

[dev-dependencies]
static-alloc = "0.2.4"

[build-dependencies]
cc = "1.0"

[features]
default = ["all"]
# should enable all libc functions gated behind features
all = [
    "abs",
    "atoi",
    "isalpha",
    "isdigit",
    "isspace",
    "isupper",
    "itoa",
    "memchr",
    "qsort",
    "rand_r",
    "rand",
    "snprintf",
    "strcat",
    "strchr",
    "strcmp",
    "strcpy",
    "strlen",
    "strncasecmp",
    "strncmp",
    "strncpy",
    "strrchr",
    "strspn",
    "strcspn",
    "strstr",
    "strtoimax",
    "strtol",
    "strtoll",
    "strtoul",
    "strtoull",
    "strtoumax",
    "utoa",
]

# libc functions gated behind features
abs = []
atoi = []
isalpha = []
isdigit = []
isspace = []
isupper = []
itoa = []
memchr = []
qsort = []
rand_r = []
rand = ["rand_r", "dep:portable-atomic"]
snprintf = []
strcat = []
strchr = []
strcmp = []
strcpy = []
strlen = []
strncasecmp = []
strncmp = []
strncpy = []
strrchr = []
strspn = []
strcspn = []
strstr = []
strtoimax = []
strtol = []
strtoll = []
strtoul = []
strtoull = []
strtoumax = []
utoa = []

# options for rand
rand_max_i16 = []

# malloc/free support
alloc = []

# Signal support is optional because it requires atomics
signal = ["dep:portable-atomic"]
# bring in critical-section based portable atomics
signal-cs = ["portable-atomic/critical-section"]

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["all", "alloc", "signal"]
